@@ -5,6 +5,7 @@
 	* Add SerialFile::readLine() method.
 	* Use the SerialFile::readLine() method in the example.
 	* SerialFile: Don't return empty strings for each line.
+	* SerialFile: Disable translation of \r to \n.
 
 2011-03-06  Bernhard Walle <bernhard@bwalle.de>
 
